// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Target> should open and close on Trigger click: closed 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    id="collapse--0"
    style="visibility: hidden; position: fixed; margin: 0px; left: 0px; top: 0px; transform: translate3d(0, -100%, 0); right: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="collapse--0"
    aria-expanded="false"
  >
    open me
  </button>
</DocumentFragment>
`;

exports[`<Target> should open and close on Trigger click: closed 2`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    id="collapse--1"
    style="visibility: hidden; position: fixed; margin: 0px; top: 0px; transform: translate3d(100%, 0, 0); right: 0px; bottom: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="collapse--1"
    aria-expanded="false"
  >
    open me
  </button>
</DocumentFragment>
`;

exports[`<Target> should open and close on Trigger click: closed 3`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    id="collapse--2"
    style="visibility: hidden; position: fixed; margin: 0px; left: 0px; transform: translate3d(0, 100%, 0); right: 0px; bottom: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="collapse--2"
    aria-expanded="false"
  >
    open me
  </button>
</DocumentFragment>
`;

exports[`<Target> should open and close on Trigger click: closed 4`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    id="collapse--3"
    style="visibility: hidden; position: fixed; margin: 0px; left: 0px; top: 0px; transform: translate3d(-100%, 0, 0); bottom: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="collapse--3"
    aria-expanded="false"
  >
    open me
  </button>
</DocumentFragment>
`;

exports[`<Target> should open and close on Trigger click: closed initially 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    id="collapse--0"
    style="visibility: hidden; position: fixed; margin: 0px; left: 0px; top: 0px; transform: translate3d(0, -100%, 0); right: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="collapse--0"
    aria-expanded="false"
  >
    open me
  </button>
</DocumentFragment>
`;

exports[`<Target> should open and close on Trigger click: closed initially 2`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    id="collapse--1"
    style="visibility: hidden; position: fixed; margin: 0px; top: 0px; transform: translate3d(100%, 0, 0); right: 0px; bottom: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="collapse--1"
    aria-expanded="false"
  >
    open me
  </button>
</DocumentFragment>
`;

exports[`<Target> should open and close on Trigger click: closed initially 3`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    id="collapse--2"
    style="visibility: hidden; position: fixed; margin: 0px; left: 0px; transform: translate3d(0, 100%, 0); right: 0px; bottom: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="collapse--2"
    aria-expanded="false"
  >
    open me
  </button>
</DocumentFragment>
`;

exports[`<Target> should open and close on Trigger click: closed initially 4`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    id="collapse--3"
    style="visibility: hidden; position: fixed; margin: 0px; left: 0px; top: 0px; transform: translate3d(-100%, 0, 0); bottom: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="collapse--3"
    aria-expanded="false"
  >
    open me
  </button>
</DocumentFragment>
`;

exports[`<Target> should open and close on Trigger click: open 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    id="collapse--0"
    style="visibility: visible; position: fixed; margin: 0px; left: 0px; top: 0px; transform: translate3d(0, 0, 0); right: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="collapse--0"
    aria-expanded="true"
  >
    open me
  </button>
</DocumentFragment>
`;

exports[`<Target> should open and close on Trigger click: open 2`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    id="collapse--1"
    style="visibility: visible; position: fixed; margin: 0px; top: 0px; transform: translate3d(0, 0, 0); right: 0px; bottom: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="collapse--1"
    aria-expanded="true"
  >
    open me
  </button>
</DocumentFragment>
`;

exports[`<Target> should open and close on Trigger click: open 3`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    id="collapse--2"
    style="visibility: visible; position: fixed; margin: 0px; left: 0px; transform: translate3d(0, 0, 0); right: 0px; bottom: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="collapse--2"
    aria-expanded="true"
  >
    open me
  </button>
</DocumentFragment>
`;

exports[`<Target> should open and close on Trigger click: open 4`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    id="collapse--3"
    style="visibility: visible; position: fixed; margin: 0px; left: 0px; top: 0px; transform: translate3d(0, 0, 0); bottom: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="collapse--3"
    aria-expanded="true"
  >
    open me
  </button>
</DocumentFragment>
`;

exports[`<Target> should open on the left by default: closed initially 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    id="collapse--4"
    style="visibility: hidden; position: fixed; margin: 0px; left: 0px; top: 0px; transform: translate3d(-100%, 0, 0); bottom: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="collapse--4"
    aria-expanded="false"
  >
    open me
  </button>
</DocumentFragment>
`;

exports[`<Target> should open on the left by default: open 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    id="collapse--4"
    style="visibility: visible; position: fixed; margin: 0px; left: 0px; top: 0px; transform: translate3d(0, 0, 0); bottom: 0px;"
  >
    Hello world
  </div>
  <button
    aria-controls="collapse--4"
    aria-expanded="true"
  >
    open me
  </button>
</DocumentFragment>
`;
